# asparuh_project

./: App.cpp  App.h  Arrow.cpp  Arrow.h  Button.cpp  Button.h  CMakeLists.txt  Deck.cpp  Deck.h  Manager.cpp  Manager.h  Player.cpp  Player.h  main.cpp  stats.xml
assets/: Text File
assets/cards/: cards.rar
